@@ -1567,17 +1567,21 @@ SEXP attribute_hidden do_diag(SEXP call, SEXP op, SEXP args, SEXP rho)
 }
 
 
-/* backsolve(r, x, k, upper.tri, transpose) */
+/* backsolve(r, b, k, upper.tri, transpose) */
 SEXP attribute_hidden do_backsolve(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
     int nprot = 1;
     checkArity(op, args);
 
     SEXP r = CAR(args); args = CDR(args);
-    SEXP x = CAR(args); args = CDR(args);
-    int nb = ncols(x), nrx = nrows(r);
+    SEXP b = CAR(args); args = CDR(args);
+    int nrr = nrows(r), nrb = nrows(b), ncb = ncols(b);
     int k = asInteger(CAR(args)); args = CDR(args);
-    if (k == NA_INTEGER || k <= 0 || k > nrx) 
+    /* k is the number of rows to be used: there must be at least that
+       many rows and cols in the rhs and at least that many rows on
+       the rhs.
+    */
+    if (k == NA_INTEGER || k <= 0 || k > nrr || k > ncols(r) || k > nrb) 
 	error(_("invalid '%s' argument"), "k");
     int upper = asLogical(CAR(args)); args = CDR(args);
     if (upper == NA_INTEGER) error(_("invalid '%s' argument"), "upper.tri");
@@ -1585,13 +1589,26 @@ SEXP attribute_hidden do_backsolve(SEXP call, SEXP op, SEXP args, SEXP rho)
     if (trans == NA_INTEGER) error(_("invalid '%s' argument"), "transpose");
     SEXP ans;
     if (TYPEOF(r) != REALSXP) {PROTECT(r = coerceVector(r, REALSXP)); nprot++;}
-    if (TYPEOF(x) != REALSXP) {PROTECT(x = coerceVector(x, REALSXP)); nprot++;}
-    PROTECT(ans = allocMatrix(REALSXP, k, nb));
-    int info = 0, job = upper + 10 * trans;
-    bakslv(REAL(r), &nrx, &k, REAL(x), &k, &nb, REAL(ans), &job, &info); 
-    if (info)
-	error(_("singular matrix in 'backsolve'. First zero in diagonal [%d]"),
-	    info);
+    if (TYPEOF(b) != REALSXP) {PROTECT(b = coerceVector(b, REALSXP)); nprot++;}
+    double *rr = REAL(r);
+
+    /* check for zeros on diagonal of r: only k row/cols are used. */
+    size_t incr = nrr + 1;
+    for(int i = 0; i < k; i++) { /* check for zeros on diagonal */
+	if (rr[i * incr] == 0.0)
+	    error(_("singular matrix in 'backsolve'. First zero in diagonal [%d]"),
+		  i + 1);
+    }
+
+    PROTECT(ans = allocMatrix(REALSXP, k, ncb));
+    if (k > 0 && ncb > 0) {
+       /* copy (part) cols of b to ans */
+	for(R_xlen_t j = 0; j < ncb; j++)
+	    memcpy(REAL(ans) + j*k, REAL(b) + j*nrb, (size_t)k *sizeof(double));
+	double one = 1.0;
+	F77_CALL(dtrsm)("L", upper ? "U" : "L", trans ? "T" : "N", "N", 
+			&k, &ncb, &one, rr, &nrr, REAL(ans), &k);
+    }
     UNPROTECT(nprot);
     return ans;
 }
